--- a/src/quest_manager/templates/quest_manager/quests.html
+++ b/src/quest_manager/templates/quest_manager/quests.html
@@ -12,6 +12,8 @@
 {% block heading_inner %} {{ heading }}
   {% if request.user.is_staff %}
     <a class="btn btn-primary" href="{% url 'quests:quest_create' %}" role="button">New</a>
+  {% elif available_tab_active and remove_hidden and request.user.profile.hidden_quests %}
+    <a class="btn btn-default btn" href="{% url 'quests:available_all' %}" role="button">Show Hidden Quests</a>
   {% endif %}
 {% endblock %}
 
