Quest info icons, checking quest is prereq to others

--- a/src/quest_manager/templates/quest_manager/tab_quests_available.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_available.html
@@ -11,9 +11,9 @@
   <div class="row panel-heading">
     <div class="col-xs-1 col-icon"></div>
     <div class="col-xs-6">Quest</div>
-    <div class="col-xs-1">XP   </div>
-    <div class="col-xs-3">Expiry</div>
-    <div class="col-xs-2"></div>
+    <div class="col-xs-1 text-right">XP   </div>
+    <div class="col-xs-2 text-right">Expiry</div>
+    <div class="col-xs-2"><!-- status_icons --></div>
   </div>
   <div class="panel-group panel-group-packed" id="accordion-available"
     role="tablist" aria-multiselectable="true">
@@ -42,18 +42,18 @@
                 src="{{ q.get_icon_url }}" alt="icon"/>
             </div>
             <div class="col-xs-6">{{q.name}}</div>
-            <div class="col-xs-1">{{q.xp}}  </div>
+            <div class="col-xs-1 text-right">{{q.xp}}  </div>
             {% comment %}
               <div class="col-xs-2"><small>
                {% for c in q.categories.all %}{{c}} {% empty %}-{% endfor %}
               </small></div>
             {% endcomment %}
-            <div class="col-xs-3"><small>
+            <div class="col-xs-2 text-right"><small>
               {% if q.date_expired %}{{q.date_expired}}
               {% else %}{{q.time_expired}}
               {% endif %}
             </small></div>
-            <div id="status-icon-{{q.id}}" class="col-xs-1"></div>
+            <div id="status-icon-{{q.id}}" class="col-xs-2"></div>
 
           </h4>
         </div> <!-- row -->
