quest status icon tweaks

--- a/src/quest_manager/templates/quest_manager/tab_quests_available.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_available.html
@@ -53,7 +53,7 @@
               {% else %}{{q.time_expired}}
               {% endif %}
             </small></div>
-            <div id="status-icon-{{q.id}}" class="col-xs-2"></div>
+            <div id="status-icon-{{q.id}}" class="col-xs-2  text-muted"></div>
 
           </h4>
         </div> <!-- row -->
