--- a/src/quest_manager/templates/quest_manager/tab_quests_submission.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_submission.html
@@ -42,7 +42,7 @@
             <div class="col-xs-5">{{s.quest.name}}</div>
             <div class="col-xs-1">{{s.quest.xp}}  </div>
             <div class="col-xs-2"><small>
-              {% for c in s.quest.categories.all %}{{c}} {% empty %}-{% endfor %}
+              {% if s.quest.campaign %}{{ s.quest.campaign }} {% else %}-{% endif %}
             </small></div>
             <div class="col-xs-3">
               {% if s.is_approved %}
