--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -123,7 +123,10 @@
                             Box BETA</a></li>
                         <li>
                             <a href="https://docs.google.com/drawings/d/1IN1nFr00VI2BWaRvraiiRGgnYoKPs4ywt2rWevwHgXI/edit?usp=sharing">
-                                <i class="fa fa-fw fa-map-o"></i>&nbsp;&nbsp;Quest Map</a></li>
+                                <i class="fa fa-fw fa-map-o"></i>&nbsp;&nbsp;Quest Map (old)</a></li>
+                        <li>
+                            <a href="{% url 'maps:index' %}">
+                                <i class="fa fa-fw fa-share-alt"></i>&nbsp;&nbsp;Quest Map (auto)</a></li>
                         <li><a href="{% url 'courses:ranks' %}">
                             <i class="fa fa-fw fa-star-o"></i>&nbsp;&nbsp;Ranks List</a></li>
                         <li>
