--- a/src/djcytoscape/templates/djcytoscape/fs_base.html
+++ b/src/djcytoscape/templates/djcytoscape/fs_base.html
@@ -1,4 +1,4 @@
-{% extends "base_sidebar.html" %}
+{% extends "base_no_sidebar.html" %}
 {% load staticfiles %}
 
 {% block head_title %}Maps | {% endblock %}
@@ -6,7 +6,7 @@
 {% block head %}{% endblock %}
 
 {% block content_first %}{% endblock %}
-{% block heading %}<i class="fa fa-share-alt pull-right"></i>{% block heading_inner %}{% endblock%} {% endblock %}
+{% block heading %}<i class="fa fa-share-alt pull-right"></i>Maps {% endblock %}
 
 {% block content %}{% endblock %}
 {% block js %}{% endblock %}
