dagre maps views and dark styles

--- a/src/djcytoscape/templates/djcytoscape/index.html
+++ b/src/djcytoscape/templates/djcytoscape/index.html
@@ -12,7 +12,7 @@
     <p>No maps are available.</p>
 {% endif %}
 
-<a href="{% url 'djcytoscape:generate_map' %}">Generate MAP</a>
+<a href="{% url 'djcytoscape:generate_unseeded' %}">Generate a MAP</a>
 {% endblock %}
 
 
