--- a/src/djcytoscape/templates/djcytoscape/quest_map.html
+++ b/src/djcytoscape/templates/djcytoscape/quest_map.html
@@ -13,7 +13,7 @@
 {% block content %}
     {% if user.is_staff %}
         <p>
-            <a class="btn btn-success" href="{% url 'djcytoscape:regenerate' scape.id %}" role="button"
+            <a class="btn btn-default" href="{% url 'djcytoscape:regenerate' scape.id %}" role="button"
               title = "Recalculate this Map.  This may take a few minutes." >
               <i class="fa fa-refresh"></i>
             </a>
@@ -64,6 +64,40 @@
     cy.on('tap', 'node.link', function(){
         window.location.href = this.data('href');
     });
+
+    {% if request.user.profile.dark_theme %}
+        // http://js.cytoscape.org/#cy.style
+        $(document).ready(function() {
+             cy.style()
+                     .selector('node')
+                        .style({
+                            'color': '#c8c8c8',
+                            'background-opacity': 1,
+                            'background-color': '#32383e',
+                        })
+                     .selector('node.link')
+                        .style({
+                            'color': '#609dd2',
+                            'border-color': '#609dd2',
+                            'background-opacity': 1,
+                        })
+                     .selector('node.link_hover')
+                        .style({
+                            'background-opacity': 1,
+                            'background-color': '#3e444c',
+                            'color': '#88b5dd',
+                            'border-color': '#88b5dd',
+                        })
+                      .selector('node.campaign')
+                        .style({
+                            'background-opacity': 0,
+                            'border-color': '#5A5A5A',
+                        })
+                     .update()
+            ;
+
+        });
+    {% endif %}
 </script>
 
 {%  endblock %}
