--- a/src/djcytoscape/templates/djcytoscape/quest_map.html
+++ b/src/djcytoscape/templates/djcytoscape/quest_map.html
@@ -3,9 +3,7 @@
 {% block head_css %}
     #cy {
         width: 100%;
-        height: 800px;
-        position: absolute;
-
+        position: relative;
         left: 0px;
     }
 {% endblock %}
