--- a/src/comments/templates/comments/comments.html
+++ b/src/comments/templates/comments/comments.html
@@ -37,7 +37,10 @@
               {{comment.text|safe}}
               <ul>
               {% for document in comment.document_set.all %}
-                <li><a href="{{ document.docfile.url }}">{{ document.docfile|filename }}</a></li>
+                <li><a href="{{ document.docfile.url }}">{{ document.docfile|filename }}</a>
+                    <a href="{% url 'portfolios:art_add' document.id %}"
+                    class="btn btn-default btn-xs pull-right">Add to Portfolio</a>
+                </li>
               {% endfor %}
               </ul>
           </div>
