--- a/src/portfolios/templates/portfolios/art_detail.html
+++ b/src/portfolios/templates/portfolios/art_detail.html
@@ -7,9 +7,14 @@
 {% endblock %}
 
 {% block content %}
-    <p>Artist: {{ art.portfolio.user }}</p>
-    <p>Description: {{ art.description }}</p>
-    <img src="{{ art.file.url }}" />
+    <ul>
+        <td>Artist: {{ art.portfolio.user }}</td>
+        <td><img class="icon-xl" alt="{{ art.title }}" src="{{ art.get_icon_url }}" /></td>
+        <td>Title: {{ art.title }}</td>
+        <td>Date: {{ art.date }}</td>
+        <td>Art Type: {{ art.get_art_type }}</td>
+        <td>Description: {{ art.description }}</td>
+    </ul>
 
 {% endblock %}
 
