--- a/src/portfolios/templates/portfolios/art_detail.html
+++ b/src/portfolios/templates/portfolios/art_detail.html
@@ -9,7 +9,7 @@
 {% block content %}
     <ul>
         <td>Artist: {{ art.portfolio.user }}</td>
-        <td><img class="icon-xl" alt="{{ art.title }}" src="{{ art.get_icon_url }}" /></td>
+        <td><img class="icon-xl" alt="{{ art.title }}" src="{{ art.get_image_url }}" /></td>
         <td>Title: {{ art.title }}</td>
         <td>Date: {{ art.date }}</td>
         <td>Art Type: {{ art.get_art_type }}</td>
