--- a/src/portfolios/templates/portfolios/art_form.html
+++ b/src/portfolios/templates/portfolios/art_form.html
@@ -15,8 +15,10 @@
 
 {% block content %}
 <form action="{{ action_value }}" enctype="multipart/form-data" method="post">{% csrf_token %}
+      <a href="{% url 'portfolios:edit' portfolio.pk %}" role="button" class="btn btn-danger">Cancel</a>
+  <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" /><br><br>
   {{ form|crispy }}
-  <a href="{% url 'portfolios:edit' request.user.id %}" role="button" class="btn btn-danger">Cancel</a>
+  <a href="{% url 'portfolios:edit' portfolio.pk %}" role="button" class="btn btn-danger">Cancel</a>
   <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
 </form>
 {% endblock %}
