--- a/src/portfolios/templates/portfolios/form.html
+++ b/src/portfolios/templates/portfolios/form.html
@@ -6,7 +6,7 @@
 {% block content %}
 <form action="{{ action_value }}" enctype="multipart/form-data" method="post">{% csrf_token %}
   {{ form|crispy }}
-  <a href="{% url 'portfolios:detail' request.user.profile.id %}" role="button" class="btn btn-danger">Cancel</a>
+  <a href="{% url 'portfolios:detail' object.pk %}" role="button" class="btn btn-danger">Cancel</a>
   <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
 </form>
 {% endblock %}
